--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -14,10 +14,10 @@
 	  <div class="col-md-6">
 	  	<div class="panel panel-default">
       	  <div class="panel-heading">
-      		<h3 class="panel-title">2nd panel</h3>
+      		<h3 class="panel-title">Data</h3>
       	  </div>
       	  <div class="panel-body">
-      		for future use
+      		{!$testFormValues}
       	  </div>
       	</div>
 	  </div>
