--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -14,7 +14,10 @@
 	<link rel="stylesheet" media="screen,projection,tv" href="{$basePath}/css/screen.css">
 	<link rel="stylesheet" media="print" href="{$basePath}/css/print.css">
 	<link rel="stylesheet" href="{$basePath}/assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="{$basePath}/assets/google-code-prettify/prettify.css">
 	<link rel="shortcut icon" href="{$basePath}/favicon.ico">
+	<script src="{$basePath}/assets/google-code-prettify/prettify.js"></script>
+	{!prettyPrintStyle()}
 	{block head}{/block}
 </head>
 
