--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -7,7 +7,10 @@
       		<h3 class="panel-title">Test Form</h3>
       	  </div>
       	  <div class="panel-body">
-      		{control testForm}
+      	  	{capture $testForm}
+      			{control testForm}
+      		{/capture}
+      		{!$testForm}
       	  </div>
       	</div>
 	  </div>
@@ -20,6 +23,15 @@
       		{!$testFormValues}
       	  </div>
       	</div>
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+			<h3 class="panel-title">Html</h3>
+		  </div>
+		  <div class="panel-body">
+			<pre class="prettyprint linenums pre-scrollable">{tidyFormatString($testForm)}</pre>
+			<script>prettyPrint();</script>
+		  </div>
+		</div>
 	  </div>
 	</div>
 </div>
