--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -1,14 +1,3 @@
-body {
-	font-size: 15px;
-	line-height: 1.6;
-	color: #333;
-	background: white;
-}
-
-h1 {
-	color: #3484D2;
-}
-
 #ajax-spinner {
 	margin: 15px 0 0 15px;
 	padding: 13px;
@@ -31,24 +20,26 @@ a[href^="#error:"] {
 	color: white;
 }
 
-form th, form td {
-	vertical-align: top;
-	font-weight: normal;
-}
-
-form th {
-	text-align: right;
-}
-
-form .required label {
-	font-weight: bold;
-}
-
-form .error {
-	color: #D00;
-	font-weight: bold;
-}
-
 html.js .jshidden {
 	display: none;
+}
+
+.no-padding{
+	padding: 0 !important;
+}
+
+body{
+	background-color: #111 !important;
+}
+
+.navbar-default .navbar-brand {
+	color: #65B042;
+}
+
+.navbar-default {
+	background-color: #151617;
+}
+
+.panel-default {
+	border-color: #666;
 }
