--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -38,10 +38,8 @@
 							<h3 class="panel-title">Html</h3>
 						</div>
 						<div class="panel-body no-padding">
-						<pre class="prettyprint linenums pre-scrollable">
-							{tidyFormatString($renderedComponentHtml)}
-						</pre>
-							<script>prettyPrint();</script>
+							<pre
+								class="prettyprint linenums pre-scrollable">{tidyFormatString($renderedComponentHtml)}</pre>
 						</div>
 					</div>
 				{/if}
