fix: display correctly title
-display "|" after website name in page title only if title is defined
-define title for Replicator page

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -9,7 +9,7 @@
 	<meta name="viewport"
 		  content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta charset="utf-8">
-	<title>{$presenter->context->parameters['appName']} | {ifset #title}{include title|striptags}{/ifset}</title>
+	<title>{$presenter->context->parameters['appName']}{ifset #title} | {include title|striptags}{/ifset}</title>
 	{if Tracy\Debugger::$productionMode}
 		<link rel="stylesheet" media="screen,projection,tv" href="{$basePath}/css/screen.min.css?{$presenter->context->parameters['version']}">
 	{else}
