--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -43,8 +43,50 @@
 								class="prettyprint linenums pre-scrollable">{tidyFormatString($renderedComponentHtml)}</pre>
 						</div>
 					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h3 class="panel-title">Html codemirror</h3>
+						</div>
+						<div class="panel-body no-padding">
+							<label>
+							<textarea id="codemirror"
+								class="form-control">{tidyFormatString($renderedComponentHtml)}</textarea></label>
+						</div>
+					</div>
 				{/if}
 			</div>
 		</div>
 	</div>
+{/block}
+{block js}
+	<script
+		src="{$basePath}/bower_components/codemirror/addon/display/fullscreen.js"></script>
+	<script
+		src="{$basePath}/bower_components/codemirror/addon/display/placeholder.js"></script>
+	<script
+		src="{$basePath}/bower_components/codemirror/addon/display/rulers.js"></script>
+	<script
+		src="{$basePath}/bower_components/codemirror/addon/selection/active-line.js"></script>
+	<script src="{$basePath}/bower_components/codemirror/mode/xml/xml.js"></script>
+	<script src="{$basePath}/bower_components/codemirror/mode/javascript/javascript.js"></script>
+	<script src="{$basePath}/bower_components/codemirror/mode/css/css.js"></script>
+	<script src="{$basePath}/bower_components/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+	<script>
+		var editor = CodeMirror.fromTextArea(document.getElementById('codemirror'), {
+			lineNumbers: true,
+			mode: "htmlmixed",
+			styleActiveLine: true,
+			//readonly: true,
+			showCursorWhenSelecting: true,
+			theme: "pastel-on-dark",
+			extraKeys: {
+				"F11": function (cm) {
+					cm.setOption("fullScreen", !cm.getOption("fullScreen"));
+				},
+				"Esc": function (cm) {
+					if (cm.getOption("fullScreen")) cm.setOption("fullScreen", false);
+				}
+			}
+		});
+	</script>
 {/block}
