--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -22,13 +22,13 @@
 		<link rel="stylesheet" href="{$basePath}/bower_components/datatables/media/css/jquery.dataTables.css" />
 		<link rel="stylesheet" href="{$basePath}/bower_components/datatables-bootstrap3/BS3/assets/css/datatables.css" />
 		<!-- endbower -->
-		<link rel="stylesheet"
-			  href="{$basePath}/bower_components/codemirror/theme/pastel-on-dark.css"/>
-		<link rel="stylesheet"
-			  href="{$basePath}/bower_components/codemirror/addon/display/fullscreen.css"/>
 		<link rel="stylesheet" media="screen,projection,tv" href="{$basePath}/css/screen.css">
 		<!-- endbuild -->
 	{/if}
+	<link rel="stylesheet"
+		  href="{$basePath}/bower_components/codemirror/theme/pastel-on-dark.css"/>
+	<link rel="stylesheet"
+		  href="{$basePath}/bower_components/codemirror/addon/display/fullscreen.css"/>
 	<link rel="stylesheet" media="print" href="{$basePath}/css/print.css">
 	<link rel="shortcut icon" href="{$basePath}/favicon.ico?{$presenter->context->parameters['version']}">
 	{!prettyPrintStyle()}
@@ -92,10 +92,26 @@
 			<!-- endbower -->
 			<script src="{$basePath}/js/sortableReplicator.ajax.js"></script>
 			<script src="{$basePath}/js/main.js"></script>
-			{block js}
-			{/block}
 			<!-- endbuild -->
 		{/if}
+		<script
+			src="{$basePath}/bower_components/codemirror/addon/display/fullscreen.js"></script>
+		<script
+			src="{$basePath}/bower_components/codemirror/addon/display/placeholder.js"></script>
+		<script
+			src="{$basePath}/bower_components/codemirror/addon/display/rulers.js"></script>
+		<script
+			src="{$basePath}/bower_components/codemirror/addon/selection/active-line.js"></script>
+		<script
+			src="{$basePath}/bower_components/codemirror/mode/xml/xml.js"></script>
+		<script
+			src="{$basePath}/bower_components/codemirror/mode/javascript/javascript.js"></script>
+		<script
+			src="{$basePath}/bower_components/codemirror/mode/css/css.js"></script>
+		<script
+			src="{$basePath}/bower_components/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+	{/block}
+	{block js}
 	{/block}
 </body>
 </html>
