fix(nette.ajax.js)  can be automatically processed in build thanks to bower.json override definition of main attribute

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -83,12 +83,14 @@
 			<script src="{$basePath}/bower_components/jquery-ui/jquery-ui.js"></script>
 			<script src="{$basePath}/bower_components/codemirror/lib/codemirror.js"></script>
 			<script src="{$basePath}/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-			<script src="{$basePath}/bower_components/nette-forms/src/assets/netteForms.js"></script>
 			<script src="{$basePath}/bower_components/nette.ajax.js/nette.ajax.js"></script>
+			<script src="{$basePath}/bower_components/nette.ajax.js/extensions/diagnostics.dumps.ajax.js"></script>
+			<script src="{$basePath}/bower_components/nette.ajax.js/extensions/spinner.ajax.js"></script>
 			<script src="{$basePath}/bower_components/google-code-prettify/bin/prettify.min.js"></script>
 			<script src="{$basePath}/bower_components/bootstrap-toggle/js/bootstrap-toggle.js"></script>
 			<script src="{$basePath}/bower_components/datatables/media/js/jquery.dataTables.js"></script>
 			<script src="{$basePath}/bower_components/datatables-bootstrap3/BS3/assets/js/datatables.js"></script>
+			<script src="{$basePath}/bower_components/nette-forms/src/assets/netteForms.js"></script>
 			<!-- endbower -->
 			<script src="{$basePath}/js/sortableReplicator.ajax.js"></script>
 			<script src="{$basePath}/js/main.js"></script>
