feature(SortableReplicator): supports ajax

--- a/app/examples/replicator/NestedSortableReplicators.latte
+++ b/app/examples/replicator/NestedSortableReplicators.latte
@@ -1,3 +1,4 @@
+<div n:snippet="replicator-snippet">
 {var $renderAsControl = 0}
 {if $renderAsControl}
 	{control form}
@@ -58,3 +59,4 @@
 		</div>
 	{/form}
 {/if}
+</div>
